--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 body{
     background-color: #00DBDE;
     background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);    
+  
      
 }
 .container{
@@ -11,6 +12,12 @@ body{
 }
 header{
     text-align: center;
+    
+}
+img{
+    width:100%;
+    height:30vh;
+    border-radius: 20px;
     
 }
 .content{
