--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body{
   
      
 }
-.container{
+.wrapper{
     margin: 0;
     padding: 40px;
     color: #ffffff;
@@ -34,4 +34,14 @@ button{
     border-radius: 10px;
     border:2px solid black;
 
+}
+
+@media screen and(max-width:1200px) {
+    .wrapper {
+        margin: auto;
+        max-width: 75rem;
+    }
+    img{
+        height: 50vh;
+    }
 }
