--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,39 +1,62 @@
-
-body{
+body {
     background-color: #00DBDE;
-    background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);    
-    padding: 10px;
-  
-     
+    background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+    padding: 40px;
+    height: 100%;
+
 }
-.wrapper{
+
+.container {
     margin: 0;
     padding: 40px;
     color: #ffffff;
 }
-header{
+
+header {
     text-align: center;
-    
+
 }
-img{
-    width:100%;
-    height:30vh;
+
+img {
+    width: 100%;
+    height: 30vh;
     border-radius: 20px;
-    
+
 }
-.content{
+
+.content {
     text-align: center;
     padding: 20px;
 }
-button{
+
+button {
     display: block;
-   margin: 0 auto;
+    margin: 0 auto;
     padding: 10px;
     background-color: black;
-    color:white;
+    color: white;
     border-radius: 10px;
-    border:2px solid black;
+    border: 2px solid black;
 
+}
+
+@media screen and (min-width: 640px) {
+   .container{
+    padding: 40px;
+   }
+    .flex-container {
+        display: flex;
+    }
+
+    img {
+        flex:1;
+    }
+
+    .content {
+        flex: 0 1 300px;
+      
+
+    }
 }
 
 @media screen and(max-width:1200px) {
@@ -41,7 +64,8 @@ button{
         margin: auto;
         max-width: 75rem;
     }
-    img{
+
+    img {
         height: 50vh;
     }
 }
