--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,14 @@
 body {
     background-color: #00DBDE;
     background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
-    padding: 40px;
+    padding: 10px;
     height: 100%;
 
 }
 
 .container {
     margin: 0;
-    padding: 40px;
+    padding: 33px;
     color: #ffffff;
 }
 
@@ -32,11 +32,14 @@ img {
 button {
     display: block;
     margin: 0 auto;
-    padding: 10px;
-    background-color: black;
-    color: white;
+    padding: 20px;
+    background-color: transparent;
+    color: black;
     border-radius: 10px;
     border: 2px solid black;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+
 
 }
 
