--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,15 @@
+
+html {
+    height: 100%;
+    min-height: 100%;
+}
+
 body {
     background-color: #00DBDE;
     background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
     padding: 10px;
-    height: 100%;
+    min-height: 100% !important;
+    height: 2000px;
 
 }
 
@@ -10,6 +17,8 @@ body {
     margin: 0;
     padding: 33px;
     color: #ffffff;
+    height: 100%;
+    min-height: 100%;
 }
 
 header {
@@ -42,39 +51,56 @@ button {
 
 
 }
+
 @media screen and(max-width:1200px) {
     .wrapper {
-        
         display: flex;
         flex-direction: row;
+        justify-content: center;
+        min-height: 100%;
+        height: 100%;
     }
-    .container h2{
-        color:red;
-   }
 
-
+    .container h2 {
+        color: red;
+    }
 }
 
 @media screen and (min-width: 640px) {
-/*
+
+    /*
     .container{
          margin: 164px -59px 15px -20px;
     }*/
     .flex-container {
         display: flex;
         flex-direction: row;
+        justify-content: center;
+        height: 100%;
+        margin: 85px 0px 0px 0px
+
+    }
+    header{
+        font-size: 170%;
     }
 
     img {
         flex: 1;
+        height: 23%;
     }
 
     .content {
-        padding:40px;
-        flex: 0 1 400px;
+        padding: 28px;
+        flex: 0 1 193px;
+        font-size: 20px;
     }
-.content h2,h3{
-    padding: 8px;
-}
-}
 
+    .content h2,
+    h3 {
+        font-size: 25px;
+        padding: 8px;
+    }
+    .content h3{
+        padding: 8px;
+    }
+}
