final page added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,14 @@ img {
     padding: 20px;
 }
 
+.finalpagecontent{
+    text-align: center;
+    padding: 20px;
+}
+.finalpagecontent h2{
+font-size: 40px;
+padding-top: -20px;
+}
 button {
     display: block;
     margin: 0 auto;
