Questions added to Quiz page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,9 @@ button {
 a{
     text-decoration: none;
 }
+.quizContent{
+    text-align: justify;
+}
 
 @media screen and(max-width:1200px) {
     .wrapper {
