--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,8 +41,7 @@ img {
     margin-top: -59px;;
 }
 
-.finalpagecontent h1{
-    
+.finalpagecontent h1{    
     padding-top: -20px;
     }
 .finalpagecontent h2{
@@ -66,9 +65,13 @@ a{
     text-decoration: none;
 }
 .quizContent{
-    text-align: right;
-    padding:20px;
+    display: flex;
+    flex-direction: row;  
 
+}
+ li{
+    list-style-type:none;
+    display: inline;
 }
 
 @media screen and(max-width:1200px) {
