--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,14 +64,24 @@ button {
 a{
     text-decoration: none;
 }
-.quizContent{
-    display: flex;
-    flex-direction: row;  
 
-}
- li{
+ul{
+    padding: 10px;
+    overflow: hidden;
+}  
+li{
     list-style-type:none;
     display: inline;
+}
+
+.quizContent{
+    display: flex;
+    flex-wrap: wrap;
+
+}
+.buttons{
+    display: flex;
+    flex-wrap: nowrap;
 }
 
 @media screen and(max-width:1200px) {
