--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,3 @@
-
-
-
 body {
     background-color: #00DBDE;
     background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
@@ -15,7 +12,7 @@ body {
     padding: 33px;
     color: #ffffff;
     height: 100%;
-   
+
 }
 
 header {
@@ -35,19 +32,22 @@ img {
     padding: 20px;
 }
 
-.finalpagecontent{
+.finalpagecontent {
     text-align: center;
     padding: 20px;
-    margin-top: -59px;;
+    margin-top: -59px;
+    ;
 }
 
-.finalpagecontent h1{    
+.finalpagecontent h1 {
     padding-top: -20px;
-    }
-.finalpagecontent h2{
-font-size: 27px;
-padding-top: -20px;
 }
+
+.finalpagecontent h2 {
+    font-size: 27px;
+    padding-top: -20px;
+}
+
 button {
     display: block;
     margin: 0 auto;
@@ -61,21 +61,22 @@ button {
 }
 
 
-a{
+a {
     text-decoration: none;
 }
 
 
-input,label{
+input,
+label {
     float: left;
 }
 
-li{
-    list-style-type:none;
+li {
+    list-style-type: none;
     display: inline;
 }
 
-.buttons{
+.buttons {
     display: flex;
     flex-wrap: nowrap;
     padding: 20px;
@@ -107,9 +108,9 @@ li{
         justify-content: center;
         height: 100%;
         margin: 85px 0px 0px 0px
-
     }
-    header{
+
+    header {
         font-size: 170%;
     }
 
@@ -129,8 +130,19 @@ li{
         font-size: 25px;
         padding: 8px;
     }
-    .content h3{
+
+    .content h3 {
         padding: 8px;
     }
- 
+
+    .quizContent{
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: column;
+    }
+    .buttons {
+        display: flex;
+        flex-direction:column ;
+        flex-wrap: nowrap;
+    }
 }
