--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,7 +150,7 @@ li {
         flex-wrap: nowrap;
         flex-direction: column;
         align-content: stretch;
-        justify-content: flex-start;
+        justify-content:center;
         align-items: center;
         
     }
