Quiz page made responsive for all screen device sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,7 +144,6 @@ li {
         align-items: center;
         flex-wrap: wrap;
     }
-    }
     .questionbutton{
         display: flex;
         flex-wrap: nowrap;
@@ -162,5 +161,7 @@ li {
         justify-content: space-evenly;
         flex-direction: row;
     }
-   
+   button{
+    margin-right: 20px;
+   }
 }
