--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,6 +146,7 @@ button{
         justify-content: space-evenly;
         align-items: center;
         flex-wrap: wrap;
+      
     }
     .questionbutton{
         display: flex;
@@ -154,6 +155,7 @@ button{
         align-content: stretch;
         justify-content:center;
         align-items: center;
+       
         
     }
     .buttons {
@@ -167,4 +169,19 @@ button{
    button{
     margin-right: 20px;
    }
+}
+
+@media screen and (max-width: 480px) {
+    .quizContent{
+        padding: 40px;
+    }
+
+    .quizContent h2{
+        text-align: center;
+    }
+    .answers{
+        display: block;
+        margin: 0 auto;
+    }
+
 }
