--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,5 +183,17 @@ button{
         display: block;
         margin: 0 auto;
     }
+    .buttons {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 20px;
+        flex-direction: column;
+        align-content: stretch;
+        justify-content: space-evenly;
+        align-items: stretch;
+    }
 
+    button{
+        font-size: 25px;
+    }
 }
