--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,7 @@ button{
 
 }
 
+
 .buttons {
     display: flex;
     flex-wrap: nowrap;
@@ -196,5 +197,15 @@ button{
 
     button{
         font-size: 25px;
+    }
+}
+@media screen and(min-width:1200px) {
+    .quizContent {
+        display: flex;
+        align-content: stretch;
+        justify-content: space-evenly;
+        align-items: stretch;
+        flex-wrap: wrap;
+        flex-direction: column;
     }
 }
