QuizPage made responsive to mobile and other screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,7 +185,7 @@ button{
         padding: 40px;
     }
 
-    .quizbutton h2{
+    .questionbutton h2{
         text-align: center;
     }
     .answers{
