EndGame button added and styled

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ button{
     flex-wrap: nowrap;
     padding: 20px;
 }
-.nextButton,.submitButton{
+.nextButton,.submitButton,.endGameButton{
     padding: 3px;
     color: #ececec;
     background-color: black;
